<resources>
    <string name="app_name">Challenger</string>
    <string name="action_signUp">Sign Up</string>
    <string name="action_signIn">Sign In</string>
    <string name="title_SignUp">SIGN UP</string>
    <string name="text_Email">Your Email</string>
    <string name="text_PW1">Password</string>
    <string name="action_start">I\'m ready</string>
    <string name="text_achievements">-------- Achievements --------</string>
    <string name="text_creative">Creative</string>
    <string name="text_social">Social</string>
    <string name="text_health">Health</string>
    <string name="text_adventure">Adventure</string>
    <string name="text_challenges">--------- Challenges ---------</string>
    <string name="title_Profile">PROFILE</string>
    <string name="text_fillIn">Please fill in your information</string>
    <string name="action_back">Back</string>
    <string name="text_username">Username</string>
    <string name="action_save">Save</string>
    <string name="action_LogOut">Log Out!</string>
    <string name="action_changePW">Change Password</string>
    <string name="title_changeP">EDIT PROFILE</string>
    <string name="action_changeImg">Change picture</string>
    <string name="title_social">------- Social Challenge -------</string>
    <string name="title_health">------- Health Challenge -------</string>
    <string name="title_creative">------- Creative Challenge -------</string>
    <string name="title_adventure">------- Adventure Challenge -------</string>
    <string name="action_proof">Take a proof picture</string>
    <string name="action_completed">Challenge Completed</string>
    <string name="text_proofPic">Here you can upload a proof picture!</string>
    <string name="title_changePW">Change password</string>
    <string name="text_oPW">Old password</string>
    <string name="text_nPW">New password</string>
    <string name="text_repeat">Repeat new password</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_proofPic">Upload your proof picture here!</string>
    <string name="action_notNow">Not now!</string>
    <string name="action_try">Try!</string>
    <string name="text_pic">Choose a new profile picture</string>
    <string name="achievements">ACHIEVEMENTS</string>
    <string name="camera">Go to camera</string>
    <string name="action_selectPhoto">Select a picture</string>
    <string name="gallery">Gallery</string>
    <string name="challenge1">CHALLENGE 1</string>
    <string name="challenge2">CHALLENGE 2</string>
    <string name="challenge3">CHALLENGE 3</string>
    <string name="challenge4">CHALLENGE 4</string>
    <string name="challenge5">CHALLENGE 5</string>
    <string name="challenge6">CHALLENGE 6</string>
    <string name="challenge7">CHALLENGE 7</string>
    <string name="challenge8">CHALLENGE 8</string>
    <string name="challenge9">CHALLENGE 9</string>
    <string name="challenge10">CHALLENGE 10</string>
    <string name="challenge11">CHALLENGE 11</string>
    <string name="challenge12">CHALLENGE 12</string>
    <string name="description">Challenge description</string>
    <string name="cannotopencamera">Camera can not be used without permission</string>
    <string name="challengeCompleted">If you have completed your challenge correctly click here: </string>

</resources>
