<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tarav.ourapp.Profile"
    android:background="@drawable/hintergrund_challenger"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_SignUp"
        android:textSize="20dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/man"
        tools:layout_editor_absoluteX="147dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="113dp"
        android:layout_height="19dp"
        android:text="@string/text_challenges"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_creative"
        tools:layout_editor_absoluteY="226dp"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_health"
        tools:layout_editor_absoluteY="226dp"
        tools:layout_editor_absoluteX="104dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_social"
        tools:layout_editor_absoluteY="226dp"
        tools:layout_editor_absoluteX="192dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_adventure"
        tools:layout_editor_absoluteY="226dp"
        tools:layout_editor_absoluteX="287dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="115dp"
        android:layout_height="21dp"
        android:text="@string/text_achievements"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="371dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="422dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:background="@drawable/PlusZeichen"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="251dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:background="@drawable/PlusZeichen"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="251dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:background="@drawable/PlusZeichen"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="251dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:background="@drawable/PlusZeichen"
        tools:layout_editor_absoluteX="287dp"
        tools:layout_editor_absoluteY="251dp" />

</android.support.constraint.ConstraintLayout>
