<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hintergrund_challenger"
    tools:context="com.example.tarav.ourapp.ChangeProfile">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_changeP"
        android:textColor="#3d5c5c"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/homeButtonChangeProfile"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:background="@drawable/homebtn"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="133dp"
        android:layout_height="126dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/profilepic" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="52dp"
        android:background="#ffb766"
        android:elevation="0dp"
        android:text="@string/action_save"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/editText7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/text_username"
        android:textColor="#3d5c5c"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/changePwButton"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="72dp"
        android:background="#ffb766"
        android:text="@string/action_changePW"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:background="#ffb766"
        android:text="@string/action_LogOut"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePwButton"
        app:layout_constraintVertical_bias="0.175" />

    <!--
    <TextView
        android:id="@+id/textViewSelectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select a photo"
        android:background="#ffb766"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="93dp"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/textViewCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Camera"
        android:textSize="18sp"
        android:background="#ffb766"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="49dp"
        app:layout_constraintHorizontal_bias="0.366"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectPhoto"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textViewGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gallery"
        android:textSize="18sp"
        android:background="#ffb766"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="49dp"
        app:layout_constraintHorizontal_bias="0.195"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectPhoto"
        app:layout_constraintLeft_toRightOf="@+id/textViewCamera"
        app:layout_constraintVertical_bias="0.666" />

        !-->

</android.support.constraint.ConstraintLayout>
