<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hintergrund_challenger"
    tools:context="com.example.tarav.ourapp.Challenge">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#3d5c5c"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#3d5c5c"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="228dp"
        android:layout_height="131dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#3d5c5c"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/proofPicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_proof"
        android:textSize="18sp"
        android:textColor="#fff"
        android:background="#ffb766"
        android:padding="5dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="222dp"
        android:layout_height="32dp"
        android:text="@string/text_proofPic"
        android:textAlignment="center"
        android:textColor="#3d5c5c"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/proofPicButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_completed"
        android:textSize="18sp"
        android:textColor="#fff"
        android:background="#ffb766"
        android:padding="5dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="117dp"
        android:layout_height="117dp"
        app:srcCompat="@drawable/creativebtn1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:background="@drawable/man"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
